--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+/*==========================GLOBAL===========================*/
+
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+
+
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+
+/*
+.urbanist-<uniquifier> {
+  font-family: "Urbanist", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}*/
+
+:root{
+    font-family: "Urbanist", sans-serif;
+    font-size:62.5%;
+    --deep__aqua:#288783;
+    --peach__cream:#FFEBD0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.wrapper{
+    width: min(144rem,100%);
+    padding-inline: 2rem;
+    margin: auto;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
