--- a/src/CSS/Header.css
+++ b/src/CSS/Header.css
@@ -1,13 +1,13 @@
 /*========================HEADER========================*/
 .header {
     width: 100%;
-    background-color: var(--deep__aqua);
+    background-color: var(--techColor--StrongBlue);
 
 }
 
 .header .wrapper {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     height: 7rem;
 }
@@ -19,7 +19,7 @@
 
 .wrapper #header__nav .header__nav__ul {
     display: flex;
-    gap: 2rem;
+    gap: 4rem;
     list-style: none;
 }
 
@@ -30,7 +30,7 @@
     color: var(--peach__cream);
     transform: color 0.3 ease;
     text-decoration: none;
-    font-size: 1.6rem;
+    font-size: 1.8rem;
 }
 
 .header__nav__ul__li .nav-link::after {
@@ -60,9 +60,16 @@
     text-align: center;
     border-radius: 2rem;
     background-color: var(--peach__cream);
-    color: var(--deep__aqua);
+    color: var(--techColor--StrongBlue);
     text-decoration: none;
     font-weight: bold;
+    transition: ease 0.5s;
+}
+
+.header .wrapper .header__button:hover{
+    background-color: var(--techColor--StrongBlue);
+    color: var(--peach__cream);
+    border: 1px solid var(--peach__cream);
 }
 
 @media(max-width:800px) {
@@ -74,11 +81,13 @@
         width: 100%;
         top: 7rem;
         height: 0;
-        background-color: var(--deep__aqua);
+        left: 0;
+        background-color: var(--techColor--StrongBlue);
         position: absolute;
         transition: ease 1s;
         overflow-y: hidden;
         visibility: hidden;
+        z-index: 1;
 
     }
 
@@ -105,7 +114,6 @@
 
     #header__nav .header__nav__ul .header__nav__ul__li:hover {
         width: 100%;
-        background-color: rgba(128, 128, 128, 0.548);
         text-align: center;
     }
 }
